--- a/web/index.html
+++ b/web/index.html
@@ -53,6 +53,11 @@
         return appRunner.runApp();
       });
     });
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function () {
+        navigator.serviceWorker.register("/firebase-messaging-sw.js");
+      });
+    }
   </script>
 </body>
 </html>
